crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__knot__multi-line.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/knot/multi-line
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello, world!\n" [Continue]
> "Hello?\n" [Continue]
> "Hello, are you there?\n" [Done]
outcome: Done
