crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__knot__param-multi.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/knot/param-multi
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "How much do you give?\n" [Choices: "I don't know" (0) -> 0]
> "You give 1 or 2 dollars. Hmm.\n" [Ended]
outcome: Ended
